--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "peerDependencies": {
     "cytoscape": "^2.7.0",
-    "jquery": "^1.7.0 || ^2.0.0 || ^3.0.0"
+    "jquery": "^1.7.0 || ^2.0.0 || ^3.0.0",
+    "mousetrap": "^1.6.0"
   }
 }
