--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cytoscape-view-utilities",
   "version": "2.0.7",
   "description": "Package of view utilities for cytoscape.js",
-  "main": "cytoscape-view-utilities.js",
+  "main": "src/index.js",
   "spm": {
-    "main": "cytoscape-view-utilities.js"
+    "main": "src/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
