--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iVis-at-Bilkent/view-utilities.git"
+    "url": "https://github.com/iVis-at-Bilkent/cytoscape.js-view-utilities.git"
   },
   "keywords": [
     "cytoscape",
@@ -19,9 +19,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/iVis-at-Bilkent/view-utilities/issues"
+    "url": "https://github.com/iVis-at-Bilkent/cytoscape.js-view-utilities/issues"
   },
-  "homepage": "https://github.com/iVis-at-Bilkent/view-utilities",
+  "homepage": "https://github.com/iVis-at-Bilkent/cytoscape.js-view-utilities",
   "devDependencies": {
     "browserify": "^11.2.0",
     "gulp": "^3.9.1",
