--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "peerDependencies": {
-    "cytoscape": "^2.7.0 || ^3.0.0"
+    "cytoscape": "^3.2.0"
+  },
+  "dependencies": {
+    "natives": "^1.1.6"
   }
 }
