#35 Use geometric as devDependency

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/iVis-at-Bilkent/cytoscape.js-view-utilities",
   "devDependencies": {
     "browserify": "^11.2.0",
+    "geometric": "^2.2.3",
     "gulp": "^3.9.1",
     "gulp-derequire": "^2.1.0",
     "gulp-jshint": "^1.11.2",
@@ -39,8 +40,5 @@
   },
   "peerDependencies": {
     "cytoscape": "^3.2.0"
-  },
-  "dependencies": {
-    "geometric": "^2.2.3"
   }
 }
