--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "homepage": "https://github.com/iVis-at-Bilkent/cytoscape.js-view-utilities",
   "devDependencies": {
     "browserify": "^11.2.0",
-    "geometric": "^2.2.3",
     "gulp": "^3.9.1",
     "gulp-derequire": "^2.1.0",
     "gulp-jshint": "^1.11.2",
@@ -40,5 +39,8 @@
   },
   "peerDependencies": {
     "cytoscape": "^3.2.0"
+  },
+  "dependencies": {
+    "geometric": "^2.2.3"
   }
 }
